# pyIECWind

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  IEC.ipt  IECWind_User_Guide.md  IEC_template_new.ipt  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  conda-recipe.md  environment.yml  iec_wind.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_generation.py
docs/: CASE_REFERENCE.md  CONDA_FORGE_SUBMISSION.md  INPUT_FORMAT.md  MIGRATION.md  Makefile  RELEASE_CHECKLIST.md  STUDY_EXAMPLE.md  USER_GUIDE.md  api.md  api.rst  api_contract.rst  architecture.md  changelog.rst  conf.py  contributing.rst  data_sources.rst  deployment.rst  index.md  index.rst  installation.rst  limitations.rst  make.bat  quickstart.rst  release_checklist.rst  theory.rst  units.rst  validation.rst  verification.md
examples/: sample_case.ipt
recipe/: STAGED_RECIPES_PR_BODY.md  meta.yaml
src/: README.md
src/pyiecwind/: __init__.py  cli.py  core.py  generation.py  models.py  parsing.py  template.py
tests/: __init__.py  golden_cases.py  helpers.py  test_cli.py  test_docs.py  test_generation.py  test_golden.py  test_invariants.py  test_oracle.py  test_package.py  test_parsing.py  test_property.py  test_validation.py  test_version.py
tests/golden/class1_cat_a/: ECD+R.wnd  EDC+R.wnd  EOGR.wnd  EWM01.wnd  EWM50.wnd  EWSV+12.0.wnd
tests/golden/class3_cat_c/: ECD+R.wnd  EDC+R.wnd  EOGR.wnd  EWM01.wnd  EWM50.wnd  EWSV+12.0.wnd
tests/golden/edition1/: ECD+R.wnd  EDC+R.wnd  EOGR.wnd  EWM50.wnd  EWSV+12.0.wnd  NWP10.0.wnd
tests/golden/english_baseline/: ECD+R.wnd  ECD-R.wnd  EDC+R.wnd  EOGI.wnd  EOGO.wnd  EOGR.wnd  EWM01.wnd  EWM50.wnd  EWSH-40.0.wnd  EWSV+40.0.wnd  NWP10.0.wnd
tests/golden/si_baseline/: ECD+R+1.5.wnd  ECD+R.wnd  ECD-R-2.0.wnd  ECD-R.wnd  EDC+I.wnd  EDC+O.wnd  EDC+R.wnd  EDC-I.wnd  EDC-R+1.0.wnd  EOGI.wnd  EOGO.wnd  EOGR+2.0.wnd  EOGR.wnd  EWM01.wnd  EWM50.wnd  EWSH-12.0.wnd  EWSV+12.0.wnd  EWSV-8.0.wnd  NWP10.0.wnd  NWP23.7.wnd  NWP4.0.wnd
tests/golden/slope8/: ECD+R.wnd  EDC+R.wnd  EOGR.wnd  EWM50.wnd  EWSV+12.0.wnd  NWP10.0.wnd
