[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pyiecwind"
version = "0.2.1"
description = "Modern Python package for legacy IECWind-style IEC wind-condition generation for OpenFAST InflowWind."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["numpy>=1.24"]
authors = [
  { name = "Jae Hoon Seo" }
]
keywords = ["wind-energy", "wind-turbine", "openfast", "inflowwind", "iec", "iecwind", "nrel", "legacy-iecwind"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/SMI-Lab-Inha/pyIECWind"
Repository = "https://github.com/SMI-Lab-Inha/pyIECWind"
Issues = "https://github.com/SMI-Lab-Inha/pyIECWind/issues"
Documentation = "https://pyiecwind.readthedocs.io/"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "hypothesis>=6.0",
  "ruff>=0.4",
  "mypy>=1.8",
  "build>=1.0",
  "twine>=5.0",
  "pip-audit>=2.7",
]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
  "myst-parser>=2.0",
]

[project.scripts]
pyiecwind = "pyiecwind.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
# Test fixtures use fixed-width OpenFAST-style rows that must not be reflowed.
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["pyiecwind"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
